@@ -31,6 +31,7 @@ Xfce 4.6beta1 (Xfce 4.5.91):
     Patch from Daniel Gibson.
   * Add style properties to enable painting a text shadow 'under' the
     desktop icon text labels (bug 4412).  Patch from Andrea Santilli.
+  * Add backdrop image preview to settings dialog.
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
